--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <title>Guitar Training</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="script.js"></script>
 </head>
 
-<body ng-controller="ExerciseController as ctrl">
-    <div>
-        {{ctrl.seq}}
-        <button ng-click="ctrl.generateSequence()">Generate Sequence</button>
-    </div>
+<body>
+    <sequence-generator></sequence-generator>
 </body>
+<!-- app -->
+<script src="js/app.js"></script>
+<!-- controllers -->
+<script src="js/controllers/sequenceGenController.js"></script>
+<!-- directives -->
+<script src="js/directives/sequenceGenerator.js"></script>
 
 </html>
