Refs #1: adding gitignore and angular-strap.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 
 <head>
     <title>Guitar Training</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
     <sequence-generator></sequence-generator>
 </body>
+<!-- bower components -->
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
+<script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
 <!-- app -->
 <script src="js/app.js"></script>
 <!-- controllers -->
