Refs #1: adding bower.json and seqGen style mod.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-    <sequence-generator></sequence-generator>
+    <div class="row">
+        <div class="col-md-offset-5">
+            <sequence-generator></sequence-generator>
+        </div>
+    </div>
 </body>
 <!-- bower components -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
