--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <body>
     <div class="row">
-        <div class="col-md-offset-5">
+        <div class="col-md-offset-4 col-md-2">
             <sequence-generator></sequence-generator>
+        </div>
+        <div class="col-md-2 col-md-offset-4" ng-controller="MetronomyController as ctrl">
+            <button type="button" class="btn btn-primary" ng-click="ctrl.tic.play()">tic</button>
+            <button type="button" class="btn btn-secondary" ng-click="ctrl.tac.play()">tac</button>
         </div>
     </div>
 </body>
@@ -19,10 +23,12 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
 <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
+<script src="bower_components/angular-audio/app/angular.audio.js"></script>
 <!-- app -->
 <script src="js/app.js"></script>
 <!-- controllers -->
-<script src="js/controllers/sequenceGenController.js"></script>
+<script src="js/controllers/SequenceGenController.js"></script>
+<script src="js/controllers/MetronomyController.js"></script>
 <!-- directives -->
 <script src="js/directives/sequenceGenerator.js"></script>
 
