Refs #5: creating metronomy. Still need some adjustments.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,33 @@
             <sequence-generator></sequence-generator>
         </div>
         <div class="col-md-2 col-md-offset-4" ng-controller="MetronomyController as ctrl">
-            <button type="button" class="btn btn-primary" ng-click="ctrl.tic.play()">tic</button>
-            <button type="button" class="btn btn-secondary" ng-click="ctrl.tac.play()">tac</button>
+            <div class="form-group">
+                <label for="beats">Beats:</label>
+                <select class="form-control" id="beats" ng-model="ctrl.beats">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                </select>
+            </div>
+            <label for="bpm">bpm</label>
+            <select class="form-control" id="bpm" ng-model="ctrl.bpm">
+                <option>60</option>
+                <option>80</option>
+                <option>90</option>
+                <option>100</option>
+                <option>110</option>
+                <option>120</option>
+                <option>130</option>
+                <option>140</option>
+                <option>180</option>
+            </select>
+            <button type="button" class="btn btn-primary" ng-click="ctrl.play()">play</button>
+            <button type="button" class="btn btn-primary" ng-click="ctrl.stop()">stop</button>
         </div>
     </div>
 </body>
