--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
         <div class="col-md-offset-5 col-md-2">
-            <metronomy></metronomy>
+            <metronome></metronome>
         </div>
     </div>
 </body>
@@ -29,9 +29,9 @@
 <script src="js/app.js"></script>
 <!-- controllers -->
 <script src="js/controllers/SequenceGenController.js"></script>
-<script src="js/controllers/MetronomyController.js"></script>
+<script src="js/controllers/MetronomeController.js"></script>
 <!-- directives -->
 <script src="js/directives/sequenceGenerator.js"></script>
-<script src="js/directives/metronomy.js"></script>
+<script src="js/directives/metronome.js"></script>
 
 </html>
