Refs #8: adding directive for fretboard

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Guitar Training</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/fretboard.css">
 </head>
 
 <body>
@@ -16,6 +17,9 @@
         <div class="col-md-offset-5 col-md-2">
             <metronome></metronome>
         </div>
+    </div>
+    <div class="row">
+        <fretboard></fretboard>
     </div>
 </body>
 <!-- bower components -->
@@ -33,5 +37,6 @@
 <!-- directives -->
 <script src="js/directives/sequenceGenerator.js"></script>
 <script src="js/directives/metronome.js"></script>
+<script src="js/directives/fretboard.js"></script>
 
 </html>
