Refs #8: adding new fretboard directive. It is a small fretboard

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Guitar Training</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/fretboard.css">
+    <link rel="stylesheet" href="styles/small_fretboard.css">
 </head>
 
 <body>
@@ -20,6 +21,9 @@
     </div>
     <div class="row">
         <fretboard></fretboard>
+    </div>
+    <div class="row">
+        <small-fretboard></small-fretboard>
     </div>
 </body>
 <!-- bower components -->
@@ -38,5 +42,6 @@
 <script src="js/directives/sequenceGenerator.js"></script>
 <script src="js/directives/metronome.js"></script>
 <script src="js/directives/fretboard.js"></script>
+<script src="js/directives/smallFretboard.js"></script>
 
 </html>
