--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
             <sequence-generator></sequence-generator>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-offset-5 col-md-2">
-            <metronome></metronome>
+    <div>
+        <div class="row">
+            <div class="col-md-offset-5 col-md-2">
+                <metronome></metronome>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <fretboard></fretboard>
+        <div class="row">
+            <fretboard beats="ctrl.beats"></fretboard>
+        </div>
     </div>
     <div class="row">
         <small-fretboard></small-fretboard>
@@ -35,6 +37,8 @@
 <script src="bower_components/angular-audio/app/angular.audio.js"></script>
 <!-- app -->
 <script src="js/app.js"></script>
+<!-- services -->
+<script src="js/services/MetronomeService.js"></script>
 <!-- controllers -->
 <script src="js/controllers/SequenceGenController.js"></script>
 <script src="js/controllers/MetronomeController.js"></script>
